@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015-2021 Tada AB and other contributors, as listed below.
+ * Copyright (c) 2015-2025 Tada AB and other contributors, as listed below.
  *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the The BSD 3-Clause License
@@ -14,7 +14,8 @@ package org.postgresql.pljava.internal;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.MalformedURLException;
 import java.nio.ByteBuffer;
 import java.nio.CharBuffer;
@@ -40,9 +41,12 @@ import static java.sql.Types.VARCHAR;
 
 import org.postgresql.pljava.jdbc.SQLUtils;
 import org.postgresql.pljava.management.SQLDeploymentDescriptor;
+import org.postgresql.pljava.nopolicy.FrozenProperties;
 import org.postgresql.pljava.policy.TrialPolicy;
 import static org.postgresql.pljava.annotation.processing.DDRWriter.eQuote;
 import static org.postgresql.pljava.elog.ELogHandler.LOG_WARNING;
+import static org.postgresql.pljava.internal.Backend.WITHOUT_ENFORCEMENT;
+import static org.postgresql.pljava.model.CharsetEncoding.SERVER_ENCODING;
 import static org.postgresql.pljava.sqlgen.Lexicals.Identifier.Simple;
 
 /**
@@ -109,10 +113,15 @@ public class InstallHelper
 		setPropertyIfNull( "org.postgresql.database", dbname);
 		if ( null != clustername )
 			setPropertyIfNull( "org.postgresql.cluster", clustername);
-		setPropertyIfNull( "org.postgresql.datadir", datadir);
-		setPropertyIfNull( "org.postgresql.libdir", libdir);
-		setPropertyIfNull( "org.postgresql.sharedir", sharedir);
-		setPropertyIfNull( "org.postgresql.sysconfdir", etcdir);
+
+		if ( ! WITHOUT_ENFORCEMENT )
+		{
+			setPropertyIfNull( "org.postgresql.datadir", datadir);
+			setPropertyIfNull( "org.postgresql.libdir", libdir);
+			setPropertyIfNull( "org.postgresql.sharedir", sharedir);
+			setPropertyIfNull( "org.postgresql.sysconfdir", etcdir);
+		}
+
 		setPropertyIfNull( "org.postgresql.pljava.version", implVersion);
 		setPropertyIfNull( "org.postgresql.pljava.native.version", nativeVer);
 		setPropertyIfNull( "org.postgresql.version",
@@ -122,54 +131,33 @@ public class InstallHelper
 		 */
 		setPropertyIfNull( "sqlj.defaultconnection", "jdbc:default:connection");
 
-		/*
-		 * Set the org.postgresql.pljava.udt.byteorder.{scalar,mirror}.{p2j,j2p}
-		 * properties. For shorthand, defaults can be given in shorter property
-		 * keys org.postgresql.pljava.udt.byteorder.{scalar,mirror} or even just
-		 * org.postgresql.pljava.udt.byteorder for an overall default. These
-		 * shorter keys are then removed from the system properties.
-		 */
-		String orderKey = "org.postgresql.pljava.udt.byteorder";
-		String orderAll = System.getProperty(orderKey);
-		String orderScalar = System.getProperty(orderKey + ".scalar");
-		String orderMirror = System.getProperty(orderKey + ".mirror");
+		SERVER_ENCODING.charset(); // this must be set before beginEnforcing()
 
-		if ( null == orderScalar )
-			orderScalar = null != orderAll ? orderAll : "big_endian";
-		if ( null == orderMirror )
-			orderMirror = null != orderAll ? orderAll : "native";
-
-		setPropertyIfNull(orderKey + ".scalar.p2j", orderScalar);
-		setPropertyIfNull(orderKey + ".scalar.j2p", orderScalar);
-
-		setPropertyIfNull(orderKey + ".mirror.p2j", orderMirror);
-		setPropertyIfNull(orderKey + ".mirror.j2p", orderMirror);
-
-		System.clearProperty(orderKey);
-		System.clearProperty(orderKey + ".scalar");
-		System.clearProperty(orderKey + ".mirror");
-
-		String encodingKey = "org.postgresql.server.encoding";
-		String encName = System.getProperty(encodingKey);
-		if ( null == encName )
-			encName = Backend.getConfigOption( "server_encoding");
-		try
-		{
-			Charset cs = Charset.forName(encName);
-			org.postgresql.pljava.internal.Session.s_serverCharset = cs; // poke
-			System.setProperty(encodingKey, cs.name());
-		}
-		catch ( IllegalArgumentException iae )
-		{
-			System.clearProperty(encodingKey);
-		}
-
-		/* so it can be granted permissions in the pljava policy */
+		/* so they can be granted permissions in the pljava policy */
 		System.setProperty( "org.postgresql.pljava.codesource",
 			InstallHelper.class.getProtectionDomain().getCodeSource()
 				.getLocation().toString());
 
-		setPolicyURLs();
+		if ( ! WITHOUT_ENFORCEMENT )
+		{
+			/* so they can be granted permissions in the pljava policy */
+			System.setProperty( "org.postgresql.pljava.codesource",
+				InstallHelper.class.getProtectionDomain().getCodeSource()
+					.getLocation().toString());
+			System.setProperty( "org.postgresql.pljava.codesource.api",
+				Simple.class.getProtectionDomain().getCodeSource()
+					.getLocation().toString());
+
+			setPolicyURLs();
+		}
+
+		/*
+		 * PL/Java modifies no more system properties beyond this point.
+		 * Take a defensive copy here that can be exposed through the Session
+		 * API.
+		 */
+		org.postgresql.pljava.internal.Session.s_properties =
+			new FrozenProperties(System.getProperties());
 
 		/*
 		 * Construct the strings announcing the versions in use.
@@ -187,18 +175,22 @@ public class InstallHelper
 		String vmVer = System.getProperty( "java.vm.version");
 		String vmInfo = System.getProperty( "java.vm.info");
 
-		try
+		if ( ! WITHOUT_ENFORCEMENT )
 		{
-			new URL("sqlj:x"); // sqlj: scheme must exist before reading policy
-		}
-		catch ( MalformedURLException e )
-		{
-			throw new SecurityException(
+			try
+			{
+				// sqlj scheme must exist when reading policy
+				new URI("sqlj", "x", null).toURL();
+			}
+			catch ( MalformedURLException | URISyntaxException e )
+			{
+				throw new SecurityException(
 				"failed to create sqlj: URL scheme needed for security policy",
-				e);
-		}
+					e);
+			}
 
-		beginEnforcing();
+			beginEnforcing();
+		}
 
 		StringBuilder sb = new StringBuilder();
 		sb.append( "PL/Java native code (").append( nativeVer).append( ")\n");
@@ -274,9 +266,15 @@ public class InstallHelper
 			{
 				prevURL = Security.getProperty( "policy.url." + prevIndex);
 				if ( null == prevURL )
+				{
+					@SuppressWarnings("deprecation") // Java >= 10: feature()
+					boolean hint =
+						(2 == urlIndex) && 24 <= Runtime.version().major();
+
 					throw new SQLNonTransientException(String.format(
-						"URL at %d in pljava.policy_urls follows an unset URL",
-						urlIndex), "F0000");
+						"URL at %d in pljava.policy_urls follows an unset URL" +
+						(hint ? (". " + jepSuffix) : ""), urlIndex), "F0000");
+				}
 			}
 			if ( -1 != stopIndex )
 				continue; /* should be last, but resume loop to make sure */
@@ -304,24 +302,22 @@ public class InstallHelper
 	 * layer-inappropriate boilerplate warning message when running on Java 17
 	 * or later, and react if the operation has been disallowed or "degraded".
 	 *<p>
-	 * If {@code getSecurityManager} still returns null after being set, and
-	 * the Java major version is greater than 17, this can be a sign of
-	 * "degradation" of the security API proposed in JEP 411. It may be ignored
-	 * by setting {@code -Dorg.postgresql.pljava.policy.enforcement=none} in
-	 * {@code pljava.vmoptions}. That <em>may</em> permit PL/Java to run, but
-	 * without enforcing any policy at all, no distinction between trusted and
-	 * untrusted functions, and so on. However, given uncertainty around exactly
-	 * how the Java developers will "degrade" the API in a given Java release,
-	 * the result may simply be a different failure of PL/Java to start or
-	 * properly function.
+	 * The expected form of "degradation" as of Java 24 with JEP 486 is for
+	 * {@code setSecurityManager} to throw
+	 * {@code UnsupportedOperationException}. Nonetheless, we still also check
+	 * that {@code getSecurityManager} returns the instance we intended to set.
+	 *<p>
+	 * JEP 486 explicitly allows the property {@code java.security.manager} to
+	 * be set to {@code disallow} at invocation, and this detectably differs
+	 * from its null default (despite the semantic equivalence), so that will be
+	 * the setting to include in {@code pljava.vmoptions} to indicate that
+	 * running without any policy enforcement is ok. When that property is so
+	 * set, this method is not even called.
 	 */
 	private static void beginEnforcing() throws SQLException
 	{
 		String trialURI = System.getProperty(
 			"org.postgresql.pljava.policy.trial");
-
-		String enforcement = System.getProperty(
-			"org.postgresql.pljava.policy.enforcement");
 
 		if ( null != trialURI )
 		{
@@ -335,6 +331,7 @@ public class InstallHelper
 			}
 		}
 
+		@SuppressWarnings("deprecation") // Java >= 10: feature()
 		int major = Runtime.version().major();
 
 		if ( 17 <= major )
@@ -349,42 +346,36 @@ public class InstallHelper
 		}
 		catch ( UnsupportedOperationException e )
 		{
-			if ( 17 >= major )
+			if ( 18 >= major )
 				throw new SQLException(
 					"Unexpected failure enabling permission enforcement", e);
 			throw new SQLNonTransientException(
 				"[JEP 411] The Java version selected, " + Runtime.version() +
 				", has not allowed PL/Java to enforce security policy. " +
-				"It may help to add -Djava.security.manager=allow in " +
-				"the pljava.vmoptions setting. However, that may require " +
-				"allowing PL/Java functions to execute with no policy " +
-				"enforcement, or simply lead to a different failure " +
-				"to start. If that is unacceptable, " + jepSuffix, "58000", e);
+				( 24 > major ? allowHint : "" ) + jepSuffix, "58000", e);
 		}
-
-		if ( 17 >= major )
-			throw new SQLException(
-				"Unexpected failure enabling permission enforcement");
-
-		if ( "none".equals(enforcement) )
-			return;
 
 		throw new SQLNonTransientException(
 			"[JEP 411] The Java version selected, " + Runtime.version() +
 			", cannot enforce security policy as this PL/Java version " +
-			"requires. To allow PL/Java to run with no enforcement of " +
-			"security (for example, trusted functions as untrusted), add " +
-			"-Dorg.postgresql.pljava.policy.enforcement=none in the " +
-			"pljava.vmoptions setting. However, this may lead only to a " +
-			"different failure to start. In that case, " +
-			jepSuffix, "58000");
+			"requires. " + ( 24 > major ? allowHint : "" ) + jepSuffix,
+			"58000");
 	}
 
 	private static final String jepSuffix =
+		"With Java 24 and later, this version of PL/Java can only operate " +
+		"with -Djava.security.manager=disallow set in pljava.vmoptions, " +
+		"resulting in no enforcement of any security expectations, no " +
+		"distinction between trusted and untrusted, and so on. If that is " +
+		"unacceptable, " +
 		"pljava.libjvm_location should be pointed to an earlier version " +
 		"of Java, or a newer PL/Java version should be used. For more " +
 		"explanation, please see " +
 		"https://github.com/tada/pljava/wiki/JEP-411";
+
+	private static final String allowHint =
+		"To enforce security policy in Java 18 through 23, the setting " +
+		"-Djava.security.manager=allow must be added in pljava.vmoptions. ";
 
 	/**
 	 * When PL/Java is loaded as an end-in-itself (that is, by {@code LOAD}
@@ -413,6 +404,9 @@ public class InstallHelper
 				throw new SQLNonTransientException(
 				"sqlj schema not empty for CREATE EXTENSION pljava", "55000");
 
+			if ( asExtension && ! exNihilo )
+				preAbsorb(c, s); // handle possible update from unpackaged
+
 			handlers(c, s, module_pathname);
 			languages(c, s);
 			deployment(c, s, sv);
@@ -429,6 +423,84 @@ public class InstallHelper
 				 * error if this code didn't execute.
 				 */
 				s.execute("DROP TABLE sqlj." + loadpath_tbl_quoted);
+		}
+	}
+
+	/**
+	 * Absorb a few key objects into the extension, if they exist, before the
+	 * operations that CREATE OR REPLACE them.
+	 *
+	 * Until postgres/postgres@b9b21ac, CREATE OR REPLACE would silently absorb
+	 * the object, if preexisting, into the extension being created. Since that
+	 * change, those CREATE OR REPLACE operations now fail if the object exists
+	 * but is not yet a member of the extension. Therefore, this method is
+	 * called first, to absorb those objects if they exist. Because this only
+	 * matters when the objects do not yet belong to the extension (the old
+	 * "FROM unpackaged" case), this method first checks and returns with no
+	 * effect if javau_call_handler is already an extension member.
+	 *
+	 * Because it's possible to be updating from an older PL/Java version
+	 * (for example, one without the validator functions), failure to add an
+	 * expected object to the extension because the object doesn't exist yet
+	 * is not treated here as an error.
+	 */
+	private static void preAbsorb( Connection c, Statement s)
+	throws SQLException
+	{
+		/*
+		 * Do nothing if javau_call_handler is already an extension member.
+		 */
+		try (
+			ResultSet rs = s.executeQuery(
+				"SELECT d.refobjid" +
+				" FROM" +
+				" pg_catalog.pg_namespace n" +
+				" JOIN pg_catalog.pg_proc p" +
+				"  ON pronamespace OPERATOR(pg_catalog.=) n.oid" +
+				" JOIN pg_catalog.pg_depend d" +
+				"  ON d.classid OPERATOR(pg_catalog.=) p.tableoid" +
+				"  AND d.objid OPERATOR(pg_catalog.=) p.oid" +
+				" WHERE" +
+				"  nspname OPERATOR(pg_catalog.=) 'sqlj'" +
+				"  AND proname OPERATOR(pg_catalog.=) 'javau_call_handler'" +
+				"  AND deptype OPERATOR(pg_catalog.=) 'e'"
+			)
+		)
+		{
+			if ( rs.next() )
+				return;
+		}
+
+		addExtensionUnless(c, s, "42883", "FUNCTION sqlj.java_call_handler()");
+		addExtensionUnless(c, s, "42883", "FUNCTION sqlj.javau_call_handler()");
+		addExtensionUnless(c, s, "42883",
+			"FUNCTION sqlj.java_validator(pg_catalog.oid)");
+		addExtensionUnless(c, s, "42883",
+			"FUNCTION sqlj.javau_validator(pg_catalog.oid)");
+		addExtensionUnless(c, s, "42704", "LANGUAGE java");
+		addExtensionUnless(c, s, "42704", "LANGUAGE javaU");
+	}
+
+	/**
+	 * Absorb obj into the pljava extension, unless it doesn't exist.
+	 * Pass the sqlState expected when an obj of that type doesn't exist.
+	 */
+	private static void addExtensionUnless(
+		Connection c, Statement s, String sqlState, String obj)
+	throws SQLException
+	{
+		Savepoint p = null;
+		try
+		{
+			p = c.setSavepoint();
+			s.execute("ALTER EXTENSION pljava ADD " + obj);
+			c.releaseSavepoint(p);
+		}
+		catch ( SQLException sqle )
+		{
+			c.rollback(p);
+			if ( ! sqlState.equals(sqle.getSQLState()) )
+				throw sqle;
 		}
 	}
 
@@ -706,6 +778,23 @@ public class InstallHelper
 	}
 
 	/**
+	 * Query the database metadata for existence of a column in a table in the
+	 * {@code sqlj} schema. Pass null for the column to simply check the table's
+	 * existence.
+	 */
+	private static boolean hasColumn(
+		DatabaseMetaData md, String table, String column)
+	throws SQLException
+	{
+		try (
+			ResultSet rs = md.getColumns( null, "sqlj", table, column)
+		)
+		{
+			return rs.next();
+		}
+	}
+
+	/**
 	 * Detect an existing PL/Java sqlj schema. Tests for changes between schema
 	 * variants that have appeared in PL/Java's git history and will return a
 	 * correct result if the schema actually is any of those, but does no
@@ -723,97 +812,101 @@ public class InstallHelper
 	throws SQLException
 	{
 		DatabaseMetaData md = c.getMetaData();
-		ResultSet rs = md.getProcedures( null, "sqlj", "alias_java_language");
-		boolean seen = rs.next();
-		rs.close();
-		if ( seen )
-			return SchemaVariant.REL_1_6_0;
+		try (
+			ResultSet rs =
+				md.getProcedures( null, "sqlj", "alias_java_language")
+		)
+		{
+			if ( rs.next() )
+				return SchemaVariant.REL_1_6_0;
+		}
 
-		rs = md.getColumns( null, "sqlj", "jar_descriptor", null);
-		seen = rs.next();
-		rs.close();
-		if ( seen )
+		if ( hasColumn( md, "jar_descriptor", null) )
 			return SchemaVariant.UNREL20130301b;
 
-		rs = md.getColumns( null, "sqlj", "jar_descriptors", null);
-		seen = rs.next();
-		rs.close();
-		if ( seen )
+		if ( hasColumn( md, "jar_descriptors", null) )
 			return SchemaVariant.UNREL20130301a;
 
-		rs = md.getColumns( null, "sqlj", "jar_repository", "jarmanifest");
-		seen = rs.next();
-		rs.close();
-		if ( seen )
+		if ( hasColumn( md, "jar_repository", "jarmanifest") )
 			return SchemaVariant.REL_1_3_0;
 
-		rs = md.getColumns( null, "sqlj", "typemap_entry", null);
-		seen = rs.next();
-		rs.close();
-		if ( seen )
+		if ( hasColumn( md, "typemap_entry", null) )
 			return SchemaVariant.UNREL20060212;
 
-		rs = md.getColumns( null, "sqlj", "jar_repository", "jarowner");
-		if ( rs.next() )
+		try (
+			ResultSet rs =
+				md.getColumns( null, "sqlj", "jar_repository", "jarowner")
+		)
 		{
-			int t = rs.getInt("DATA_TYPE");
-			rs.close();
-			if ( VARCHAR == t )
-				return SchemaVariant.UNREL20060125;
-			return SchemaVariant.REL_1_1_0;
+			if ( rs.next() )
+			{
+				if ( VARCHAR == rs.getInt("DATA_TYPE") )
+					return SchemaVariant.UNREL20060125;
+				return SchemaVariant.REL_1_1_0;
+			}
 		}
-		rs.close();
 
-		rs = md.getColumns( null, "sqlj", "jar_repository", "deploymentdesc");
-		seen = rs.next();
-		rs.close();
-		if ( seen )
+		if ( hasColumn( md, "jar_repository", "deploymentdesc") )
 			return SchemaVariant.REL_1_0_0;
 
-		rs = md.getColumns( null, "sqlj", "jar_entry", null);
-		seen = rs.next();
-		rs.close();
-		if ( seen )
+		if ( hasColumn( md, "jar_entry", null) )
 			return SchemaVariant.UNREL20040121;
 
-		rs = md.getColumns( null, "sqlj", "jar_repository", "jarimage");
-		seen = rs.next();
-		rs.close();
-		if ( seen )
+		if ( hasColumn( md, "jar_repository", "jarimage") )
 			return SchemaVariant.UNREL20040120;
 
-		PreparedStatement ps = c.prepareStatement( "SELECT count(*) " +
-			"FROM pg_catalog.pg_depend d, pg_catalog.pg_namespace n " +
-			"WHERE" +
-			" refclassid OPERATOR(pg_catalog.=)" +
-			"  'pg_catalog.pg_namespace'::regclass " +
-			" AND refobjid OPERATOR(pg_catalog.=) n.oid" +
-			" AND nspname OPERATOR(pg_catalog.=) 'sqlj' " +
-			" AND deptype OPERATOR(pg_catalog.=) 'n' " +
-			" AND NOT EXISTS ( " +
-			"  SELECT 1 FROM " +
-			"  pg_catalog.pg_class sqc JOIN pg_catalog.pg_namespace sqn " +
-			"  ON relnamespace OPERATOR(pg_catalog.=) sqn.oid " +
-			"  WHERE " +
-			"    nspname OPERATOR(pg_catalog.=) 'pg_catalog'" +
-			"    AND relname OPERATOR(pg_catalog.=) 'pg_extension' " +
-			"    AND classid OPERATOR(pg_catalog.=) sqc.oid " +
-			"	OR " +
-			"    nspname OPERATOR(pg_catalog.=) 'sqlj'" +
-			"    AND relname OPERATOR(pg_catalog.=) ?" +
-			"    AND classid OPERATOR(pg_catalog.=)" +
-			"     'pg_catalog.pg_class'::regclass " +
-			"    AND objid OPERATOR(pg_catalog.=) sqc.oid)");
-		ps.setString(1, loadpath_tbl);
-		rs = ps.executeQuery();
-		if ( rs.next() && 0 == rs.getInt(1) )
+		try (
+			PreparedStatement stmt = Checked.Supplier.use((() ->
+				{
+					PreparedStatement ps = c.prepareStatement(
+						/*
+						 * Is the sqlj schema 'empty'? Count the pg_depend
+						 * type 'n' dependency entries referring to the sqlj
+						 * namespace ...
+						 */
+						"SELECT count(*)" +
+						"FROM" +
+						" pg_catalog.pg_depend d, pg_catalog.pg_namespace n " +
+						"WHERE" +
+						" refclassid OPERATOR(pg_catalog.=) n.tableoid " +
+						" AND refobjid OPERATOR(pg_catalog.=) n.oid" +
+						" AND nspname OPERATOR(pg_catalog.=) 'sqlj' " +
+						" AND deptype OPERATOR(pg_catalog.=) 'n' " +
+						/*
+						 * ... but exclude from the count, if present:
+						 */
+						" AND NOT EXISTS ( " +
+						"  SELECT 1 FROM " +
+						"  pg_catalog.pg_class sqc" +
+						"  JOIN pg_catalog.pg_namespace sqn" +
+						"  ON relnamespace OPERATOR(pg_catalog.=) sqn.oid " +
+						"  WHERE " +
+						/*
+						 * (1) any dependency that is an extension (d.classid
+						 * identifies pg_catalog.pg_extension) ...
+						 */
+						"    nspname OPERATOR(pg_catalog.=) 'pg_catalog'" +
+						"    AND" +
+						"     relname OPERATOR(pg_catalog.=) 'pg_extension' " +
+						"    AND d.classid OPERATOR(pg_catalog.=) sqc.oid " +
+						"	OR " +
+						/*
+						 * (2) any dependency that is the loadpath_tbl table
+						 * we temporarily create in the extension script.
+						 */
+						"    nspname OPERATOR(pg_catalog.=) 'sqlj'" +
+						"    AND relname OPERATOR(pg_catalog.=) ?" +
+						"    AND classid OPERATOR(pg_catalog.=) sqc.tableoid" +
+						"    AND objid OPERATOR(pg_catalog.=) sqc.oid)");
+					ps.setString(1, loadpath_tbl);
+					return ps;
+				})).get();
+			ResultSet rs = stmt.executeQuery();
+		)
 		{
-			rs.close();
-			ps.close();
-			return SchemaVariant.EMPTY;
+			if ( rs.next() && 0 == rs.getInt(1) )
+				return SchemaVariant.EMPTY;
 		}
-		rs.close();
-		ps.close();
 
 		return null;
 	}
@@ -889,6 +982,11 @@ public class InstallHelper
 		UNREL20040120  ("5e4131738cd095b7ff6367d64f809f6cec6a7ba7"),
 		EMPTY          (null);
 
+		static final SchemaVariant REL_1_6_9       = REL_1_6_0;
+		static final SchemaVariant REL_1_6_8       = REL_1_6_0;
+		static final SchemaVariant REL_1_6_7       = REL_1_6_0;
+		static final SchemaVariant REL_1_6_6       = REL_1_6_0;
+		static final SchemaVariant REL_1_6_5       = REL_1_6_0;
 		static final SchemaVariant REL_1_6_4       = REL_1_6_0;
 		static final SchemaVariant REL_1_6_3       = REL_1_6_0;
 		static final SchemaVariant REL_1_6_2       = REL_1_6_0;
